--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Hype- India&#8217s leading T shirt Manufacturer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <b>
-                <a class="navbar-brand page-scroll" href="#page-top">Tirupur Garments</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Hype</a>
             </b>
             </div>
 
@@ -78,8 +78,11 @@
                         <a class="page-scroll" href="#products">Products</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#location">Location</a>
                     </li>
+                    <!-- <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -98,7 +101,7 @@
                         <div id="carousel1" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img alt="Bootstrap template" src="http://placehold.it/1200x400/b4d9a7/ffffff&text=India's Leading T-Shirt Manufacturer">
+                                    <img alt="Bootstrap template" src="http://placehold.it/1200x400/b4d9a7/ffffff&text=India&#8217s Leading T-Shirt Manufacturer">
                                         <div class="carousel-caption">
                                         <h3>Company information</h3>
                                         <p>
@@ -241,7 +244,7 @@
                             <div class="thumbnail">
                             <img src="images/products-sweat.jpg" alt="200x200" >
                             <div class="caption">
-                            <h3>Sweat T-Shirts</h3>                            
+                            <h3>Sweat-Shirts</h3>                            
                             </div>
                         </div>
                     </div>
@@ -268,8 +271,19 @@
         </div>        
     </section>
 
+    <!-- Location -->
+    <section id="location" class="location-section">
+        <div class="container-fluid">
+            <h1>Location</h1>
+            <div style="position: relative; padding-bottom: 56.25%; /* 16:9 */padding-top: 25px;height: 0; border:0"> 
+                <iframe frameborder="0" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%; broder:0" src="https://www.google.com/maps/embed/v1/place?q=Hype%2C%20Khadarpet%2C%20Tirupur%2C%20Tamil%20Nadu%2C%20India&key=AIzaSyDWSQhEGaFYgStH-mdh8Ly-FA-7LtzxS5I">
+                </iframe>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+   <!--  <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -279,14 +293,16 @@
                 </div>
             </div>
         </div>
-    </section>      
+    </section> -->
+
+    <!-- Footer-->
+     <section id="footer" class="footer-section">
+        <footer>
+            © Hype 2014
+        </footer> 
+    </section>  
     </div>
-    
   
-   
-
-   
-
 
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
@@ -307,12 +323,12 @@
             {
                BootstrapDialog.show({               
                     type: BootstrapDialog.TYPE_DANGER,
-                    title: 'Happy to help you',
+                    title: 'Thanks for your interest in Hype!!!',
                     size: BootstrapDialog.SIZE_LARGE,
                     closable: true,
                     closeByBackdrop: false,
                     closeByKeyboard: false,
-                    message:'<input type="text" class="form-control" placeholder="Name"><br/><input type="email" class="form-control" id="inputEmail" placeholder="Email"><br/><input type="text" class="form-control" placeholder="City"><br/><input type="text" class="form-control" placeholder="Phone"><br/><div class="dropdown"><button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Products<span class="caret"></span></button><ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1"><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li></ul></div><br/><input type="text" class="form-control" placeholder="Order Quantity">',
+                    message:'<input type="text" class="form-control" placeholder="Name"><br/><input type="email" class="form-control" id="inputEmail" placeholder="Email"><br/><input type="text" class="form-control" placeholder="City"><br/><input type="text" class="form-control" placeholder="Phone"><br/><div class="dropdown"><button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Products<span class="caret"></span></button><ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1"><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Polo T-Shirts</a></li><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Hoodies</a></li><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Round Neck T-shirts</a></li><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Sweat-Shirts</a></li><li role="presentation"><a role="menuitem" tabindex="-1" href="#">Dry fit T-shirts</a></li></ul></div><br/><input type="text" class="form-control" placeholder="Order Quantity">',
                     buttons:[
                                 {
                                     label: 'Cancel',
